Refine assets path

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -33,7 +33,7 @@
 }
 
 .bg-gra-03{
-    background: #07063d url('/images/bg-hero.png') !important;
+    background: #07063d url('/register-form/images/bg-hero.png') !important;
 }
 
 .label--desc {
